# telepathy-morse

./: CMakeLists.txt  ChangeLog  README.md  connection.cpp  connection.hpp  contactgroups.cpp  contactgroups.hpp  contactsearchchannel.cpp  contactsearchchannel.hpp  datastorage.cpp  datastorage.hpp  debug.cpp  debug.hpp  filetransferchannel.cpp  filetransferchannel.hpp  identifier.cpp  identifier.hpp  info.cpp  info.hpp  main.cpp  morse.manager  morse.service.in  protocol.cpp  protocol.hpp  requestdetails.cpp  requestdetails.hpp  telepathy-morse.pro  textchannel.cpp  textchannel.hpp  version.cpp.in
extras/: CFileManager.cpp  CFileManager.hpp
imports/Morse/: CMakeLists.txt  plugin.cpp  plugins.qmltypes  qmldir
rpm/: telepathy-morse-qmake.spec  telepathy-morse.spec
scripts/: bundle-backend.sh
tests/: CMakeLists.txt  tst_morse.cpp
